# aetheris-consulting.github.io

./: README.md  index.html
aethermcp/: .gitignore  LICENSE  README.md  __init__.py  __main__.py  pyproject.toml  requirements.txt
aethermcp/config/: config.example.yaml
aethermcp/core/: __init__.py  kernel.py  orchestrator.py  protocol.py  provenance.py  registry.py  types.py
aethermcp/deployment/: .env.example  Dockerfile  docker-compose.yml
aethermcp/docs/: ARCHITECTURE.md
aethermcp/examples/: budget_constrained_example.py  multi_ai_example.py  simple_example.py
aethermcp/governance/: __init__.py  cognitive_guardian.py  sentinels.py
aethermcp/servers/: __init__.py  base.py
aethermcp/servers/llm/: __init__.py  claude.py  openai.py
aethermcp/templates/: __init__.py  library.py
aethermcp/tests/: __init__.py
